# prev_prob_fogo_service

./: .gitignore  README.md  pyproject.toml
docs/: scripts_overview.md
prev_prob_fogo/: app.py
prev_prob_fogo/visualization/: gerar_tabela.py  listarColunasShapefile.py  plot_tabela_colorida.py  plots.py  plots_Estado_Centro-Oeste.py  plots_Estado_Centro-Oeste_borda.py  plots_Estado_Centro-Oeste_tabela_nome.py  plots_Estado_Com_Contorno_BR.py  plots_Estado_NORTE-seguirEssePadrao.py  plots_Estado_Nordeste.py  plots_Estado_SUL.py  plots_Estado_Sudeste.py  plots_MS-v2.py  plots_MS.py
tests/: teste_app.py
