[tool.poetry]
name = "prev-prob-fogo"
version = "0.1.0"
description = ""
authors = ["wanhenri <slipkorn.jk@gmail.com>"]
readme = "README.md"
packages = [{include = "prev_prob_fogo"}]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.14"}
geopandas = "^1.1.1"
matplotlib = "^3.10.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev prev_prob_fogo/app.py'

pre_test = 'task lint'
test = 'pytest --cov=prev_prob_fogo -vv'
post_test = 'coverage html'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


